# Main

ewellix_tlt/launch/: ewellix_driver.launch
iiwa_stack_1-20/iiwa_control/config/: iiwa_control.yaml
iiwa_stack_1-20/iiwa_moveit/config/: CartesianImpedanceInterface_controllers.yaml  VelocityJointInterface_controllers.yaml
que36_ridgeback/: .rosinstall  README.md  que36_ridgeback.rosinstall
que36_ridgeback/que36_bringup/: CMakeLists.txt  package.xml
que36_ridgeback/que36_bringup/config/: setup.bash
que36_ridgeback/que36_bringup/launch/: ewellix_driver.launch  um7.launch
que36_ridgeback/que36_bringup/scripts/: install_manipulator.sh
que36_ridgeback/que36_description/: CMakeLists.txt  package.xml
que36_ridgeback/que36_description/meshes/: Kuka iiwa 7 - Mount - 45 Angle.STL  Kuka iiwa 7 - Mount.STL  adapter_plate.stl
que36_ridgeback/que36_description/urdf/: kuka_adapter_45_plate.urdf.xacro  kuka_adapter_plate.urdf.xacro  ridgeback_description.urdf.xacro
que36_ridgeback/que36_moveit/: CMakeLists.txt  package.xml
que36_ridgeback/que36_moveit/config/: PositionJointInterface_controllers.yaml  kinematics.yaml  ridgeback.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
que36_ridgeback/que36_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ridgeback_moveit_controller_manager.launch.xml  ridgeback_moveit_model.launch  ridgeback_moveit_planning_execution.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
que36_ridgeback/que36_moveit/ridgeback_iiwa_moveit_config/cmake/: ridgeback_iiwa_moveit_configConfig.cmake
robot-kuka-ridgeback/: README.md
robot-kuka-ridgeback/screwed_stack/: README.md  ScrewedUI.json
robot-kuka-ridgeback/screwed_stack/screwed_2dnav/: CMakeLists.txt  package.xml
robot-kuka-ridgeback/screwed_stack/screwed_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robot-kuka-ridgeback/screwed_stack/screwed_2dnav/launch/: move_base.launch  slam_and_nav.launch  slam_online_sync.launch
robot-kuka-ridgeback/screwed_stack/screwed_2dnav/maps/: map.pgm  map.yaml
robot-kuka-ridgeback/screwed_stack/screwed_endeff/: CMakeLists.txt  package.xml
robot-kuka-ridgeback/screwed_stack/screwed_endeff/launch/: endeff.launch  modbus_driver.launch
robot-kuka-ridgeback/screwed_stack/screwed_endeff/scripts/: modbus_driver_node.py  modbus_metrics_node.py
robot-kuka-ridgeback/screwed_stack/screwed_endeff/src/: endeff_node.cpp
robot-kuka-ridgeback/screwed_stack/screwed_machine/: CMakeLists.txt  package.xml
robot-kuka-ridgeback/screwed_stack/screwed_machine/config/: saved_configurations.yaml  saved_tasks.yaml  task_layouts.yaml
robot-kuka-ridgeback/screwed_stack/screwed_machine/launch/: foxglove.launch  nuc_side.launch  state_machine.launch
robot-kuka-ridgeback/screwed_stack/screwed_machine/scripts/: data_recorder_node.py  joystick_node.py  state_machine_node.py  task_creator_node.py
robot-kuka-ridgeback/screwed_stack/screwed_machine/scripts/aruco_handler/: aruco_handler.py
robot-kuka-ridgeback/screwed_stack/screwed_msgs/: CMakeLists.txt  package.xml
robot-kuka-ridgeback/screwed_stack/screwed_msgs/msg/: CurrentState.msg  EndEffector.msg  ExecutionQueue.msg  Task.msg
robot-kuka-ridgeback/screwed_stack/screwed_msgs/srv/: DesiredForce.srv  GetTasks.srv  LimDiffIKinPlanner.srv  PlanTrajectory.srv  SimplePlanarPlanner.srv  UserInput.srv
robot-kuka-ridgeback/screwed_stack/screwed_planning/: CMakeLists.txt  package.xml
robot-kuka-ridgeback/screwed_stack/screwed_planning/include/: fir_coeffs.hpp  fir_filter.h  iir_filter.h  kalman_filter.h  kin_help.h
robot-kuka-ridgeback/screwed_stack/screwed_planning/launch/: diffik_server.launch  full_planning.launch  jog_position.launch  motion_planning_api.launch  robot_side.launch  robot_side_planning.launch  simple_planning_server.launch
robot-kuka-ridgeback/screwed_stack/screwed_planning/scripts/: ThreeDOFPlanner.py  diffik_planner_node.py  simple_planner_node.py
robot-kuka-ridgeback/screwed_stack/screwed_planning/src/: fir_filter.cpp  iir_filter.cpp  kalman_filter.cpp  kin_help.cpp  motion_planning_api.cpp  motion_planning_direct.cpp  motion_planning_force.cpp
screwed_stack_DEPRECATED/: CMakeLists.txt  approach.txt  approach2.txt  package.xml  standby.txt
screwed_stack_DEPRECATED/action/: ExecuteTraj.action
screwed_stack_DEPRECATED/config/: saved_configurations.yaml
screwed_stack_DEPRECATED/include/: StateMachine.hpp
screwed_stack_DEPRECATED/launch/: foxglove.launch  motion_planning_api.launch  motion_planning_client.launch  motion_planning_go.launch  motion_planning_jog.launch
screwed_stack_DEPRECATED/scripts/: basic_movement.py  iiwa_moveit_client.py  jog_position.py  state_machine.py
screwed_stack_DEPRECATED/src/: StateMachine.cpp  motion_planning_api.cpp  motion_planning_backup.cpp  motion_planning_execute.cpp  state_machine_node.cpp
screwed_stack_DEPRECATED/srv/: PlanTrajectory.srv  TriggerExecute.srv
