<?xml version="1.0"?>
<package>
  <name>screwed_endeff</name>
  <version>0.1.0</version>
  <description>State Machine for Screwed Project</description>
  <license>BSD</license>

  <author email="dj.holden@queensu.ca">DJ Holden</author>
  <maintainer email="dj.holden@queensu.ca">DJ Holden</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>screwed_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>screwed_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>