<?xml version="1.0"?>
<package>
  <name>screwed_msgs</name>
  <version>0.1.0</version>
  <description>Message Interfaces for the Screwed Stack</description>
  <license>BSD</license>

  <author email="dj.holden@queensu.ca">DJ Holden</author>
  <maintainer email="dj.holden@queensu.ca">DJ Holden</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>

  <export>
  </export>
</package>
